added other pages

--- a/desktop/app/news-feed/news-feed.template.html
+++ b/desktop/app/news-feed/news-feed.template.html
@@ -1,4 +1,4 @@
-<div class="news-feed">
+<div class="feed">
     <news-article></news-article>
     <news-article></news-article>
     <news-article></news-article>
