--- a/desktop/tickets.html
+++ b/desktop/tickets.html
@@ -2,7 +2,7 @@
 <html ng-app="exampleApp">
 <head>
     <meta charset="utf-8">
-    <title>Fest</title>
+    <title>Tickets</title>
     <!-- Example for relative path -->
     <link rel="stylesheet" type="text/css" href="css/example-style.css">
     <!-- Example for absolute path -->
@@ -23,7 +23,6 @@
 <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
 <navigation-bar></navigation-bar>
 <main class="full-height">
-        <news-feed></news-feed>
 </main>
 </body>
 </html>
