--- a/desktop/index.html
+++ b/desktop/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="exampleApp">
+<html ng-app="homePage">
 <head>
     <meta charset="utf-8">
     <title>Fest</title>
@@ -14,8 +14,6 @@
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
     <script src="app/news-feed/news-feed.module.js"></script>
     <script src="app/news-feed/news-feed.component.js"></script>
-    <script src="app/news-article/news-article.module.js"></script>
-    <script src="app/news-article/news-article.component.js"></script>
 </head>
 
 <body >
