--- a/desktop/tickets.html
+++ b/desktop/tickets.html
@@ -14,6 +14,7 @@
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
     <script src="app/buy-form/buy-form.module.js"></script>
     <script src="app/buy-form/buy-form.component.js"></script>
+    <script src="app/buy-form/total-price.component.js"></script>
 </head>
 
 <body >
