--- a/desktop/tickets.html
+++ b/desktop/tickets.html
@@ -12,6 +12,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
+    <script src="app/navigation-bar/countdown.js"></script>
     <script src="app/buy-form/buy-form.module.js"></script>
     <script src="app/buy-form/buy-form.component.js"></script>
 </head>
