--- a/desktop/about.html
+++ b/desktop/about.html
@@ -12,6 +12,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
+    <script src="app/navigation-bar/countdown.js"></script>
     <script src="app/about-feed/about-feed.module.js"></script>
     <script src="app/about-feed/about-feed.component.js"></script>
 </head>
