changed the visuals of the site a bit

--- a/desktop/app/buy-form/buy-form.template.html
+++ b/desktop/app/buy-form/buy-form.template.html
@@ -6,6 +6,8 @@
               
                       <div class="row">
                         <div class="col-50">
+                          <h3 class="main_label">Ticket Purchase</h3>
+                          <label>Please enter all the details needed to buy the ticket. The ticket will be sent to the given email address. The ticket in that mail will be needed in order to enter the festival</label>
                           <h3>Billing Address</h3>
                           <label for="fname"><i class="fa fa-user"></i> Full Name</label>
                           <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
@@ -56,7 +58,7 @@
                     <div class="col-25">
                         <total-price></total-price>
                     </div>
-                    <input type="submit" value="Continue to checkout" class="btn">
+                    <input type="submit" value="Buy Tickets" class="btn">
                   </div>
                 </div>
               
