--- a/desktop/app/navigation-bar/navigation-bar.template.html
+++ b/desktop/app/navigation-bar/navigation-bar.template.html
@@ -1,7 +1,7 @@
 <div class="topnav">
 
         <div class="topnav-centered">
-            <img src="/shared/images/logo.jpg" alt="Logo">
+            <img src="/shared/images/logo2.jpg" alt="Logo">
         </div>
         
         <a href="index.html">Home</a>
