--- a/mobile/tickets.html
+++ b/mobile/tickets.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html ng-app="homePage">
+<html ng-app="ticketPage">
 <head>
     <meta charset="utf-8">
-    <title>Fest</title>
+    <title>Tickets</title>
     <!-- Example for relative path -->
     <link rel="stylesheet" type="text/css" href="css/example-style.css">
     <!-- Example for absolute path -->
@@ -13,8 +13,9 @@
     <script src="app/navigation-bar/navigation-bar.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
     <script src="app/navigation-bar/countdown.js"></script>
-    <script src="app/news-feed/news-feed.module.js"></script>
-    <script src="app/news-feed/news-feed.component.js"></script>
+    <script src="app/buy-form/buy-form.module.js"></script>
+    <script src="app/buy-form/buy-form.component.js"></script>
+    <script src="app/buy-form/total-price.component.js"></script>
 </head>
 
 <body >
@@ -22,7 +23,7 @@
 <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
 <navigation-bar></navigation-bar>
 <main class="full-height">
-        <news-feed></news-feed>
+    <buy-form></buy-form>
 </main>
 </body>
 </html>
