Steady mobile version

--- a/mobile/tickets.html
+++ b/mobile/tickets.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tickets</title>
     <!-- Example for relative path -->
-    <link rel="stylesheet" type="text/css" href="css/example-style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobile-style.css">
     <!-- Example for absolute path -->
     <link rel="stylesheet" type="text/css" href="/shared/css/scroll-to-top.css">
     <script src="/shared/js/scroll-to-top.js"></script>
@@ -12,10 +12,13 @@
     <script src="app/app.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
-    <script src="app/navigation-bar/countdown.js"></script>
+    <script src="app/navigation-bar/hamburger-menu.component.js"></script>
     <script src="app/buy-form/buy-form.module.js"></script>
     <script src="app/buy-form/buy-form.component.js"></script>
     <script src="app/buy-form/total-price.component.js"></script>
+    <script src="app/bottom-bar/bottom-bar.module.js"></script>
+    <script src="app/bottom-bar/bottom-bar.component.js"></script>
+    <script src="app/bottom-bar/countdown.js"></script>
 </head>
 
 <body >
@@ -25,5 +28,6 @@
 <main class="full-height">
     <buy-form></buy-form>
 </main>
+<bottom-bar></bottom-bar>
 </body>
 </html>
