--- a/mobile/index.html
+++ b/mobile/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Fest</title>
     <!-- Example for relative path -->
-    <link rel="stylesheet" type="text/css" href="css/example-style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobile-style.css">
     <!-- Example for absolute path -->
     <link rel="stylesheet" type="text/css" href="/shared/css/scroll-to-top.css">
     <script src="/shared/js/scroll-to-top.js"></script>
@@ -12,9 +12,12 @@
     <script src="app/app.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.module.js"></script>
     <script src="app/navigation-bar/navigation-bar.component.js"></script>
-    <script src="app/navigation-bar/countdown.js"></script>
+    <script src="app/navigation-bar/hamburger-menu.component.js"></script>
     <script src="app/news-feed/news-feed.module.js"></script>
     <script src="app/news-feed/news-feed.component.js"></script>
+    <script src="app/bottom-bar/bottom-bar.module.js"></script>
+    <script src="app/bottom-bar/bottom-bar.component.js"></script>
+    <script src="app/bottom-bar/countdown.js"></script>
 </head>
 
 <body >
@@ -24,5 +27,6 @@
 <main class="full-height">
         <news-feed></news-feed>
 </main>
+<bottom-bar></bottom-bar>
 </body>
 </html>
